# honeycomb

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/skills/nuxt/: SKILL.md
.agents/skills/nuxt-ui/: SKILL.md
.agents/skills/vue/: SKILL.md
.github/workflows/: ci.yaml  nuxt-ci.yaml  tauri-ci.yaml  tauri-release.yaml
.vite-hooks/: pre-commit
app/: app.config.ts
app/composables/: useSidebar.ts
app/layouts/: authenticated.vue  default.vue
app/pages/: chats.vue  courses.vue  dashboard.vue  index.vue  settings.vue
app/utils/: capitalize.ts
scripts/: create-release-commit.ts  sync-tauri-version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_store.rs  db.rs  lib.rs  secure_store.rs  state.rs
src-tauri/src/agent/: loop.rs  mod.rs  prompt.rs  registry.rs  state.rs
src-tauri/src/commands/: agent.rs  chat.rs  dev.rs  memory.rs  mod.rs  provider.rs  settings.rs  tools.rs
src-tauri/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs  registry.rs  types.rs
src-tauri/src/memory/: consolidator.rs  db.rs  embedder.rs  mod.rs  rag.rs  reader.rs  retrieval.rs  salience.rs  tokenizer.rs  writer.rs
src-tauri/src/streaming/: mapper.rs  mod.rs  sentinel.rs
src-tauri/src/tools/: file.rs  git.rs  loop_tools.rs  mod.rs  registry.rs  search.rs  shell.rs
test/nuxt/: component.test.ts
test/unit/: example.test.ts
(+267 files in other folders)
