[package]
name = "honeycomb"
version = "0.0.3"
description = ""
authors = ["Mon Albert Gamil <mrgamilmonalbert@gmail.com>"]
license = "MIT"
repository = "https://github.com/xcvzmoon/honeycomb"
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
libsqlite3-sys = { version = "0.30.1", default-features = false, features = [
  "bundled-sqlcipher-vendored-openssl",
] }
tauri-plugin-store = "2.4.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
tokenizers = { version = "0.22.1", default-features = false, features = ["onig"] }
futures-util = "0.3"
keyring = "4.1.2"
